Windows builds MSI file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,6 +75,8 @@ jobs:
             make build
             cp dist/OpenLens*.exe releasefiles/OpenLens-${{ env.LENS_VERSION }}.exe
             cp dist/OpenLens*.exe dist/OpenLens-${{ env.LENS_VERSION }}.exe
+            cp dist/OpenLens*.msi releasefiles/OpenLens-${{ env.LENS_VERSION }}.msi
+            cp dist/OpenLens*.msi dist/OpenLens-${{ env.LENS_VERSION }}.msi
           fi
         shell: bash
         working-directory: lens
@@ -92,6 +94,7 @@ jobs:
         run: |
           if [ "$RUNNER_OS" == "Windows" ]; then
             certutil -hashfile OpenLens-${{ env.LENS_VERSION }}.exe SHA256 | tee OpenLens-${{ env.LENS_VERSION }}.exe.sha256
+            certutil -hashfile OpenLens-${{ env.LENS_VERSION }}.msi SHA256 | tee OpenLens-${{ env.LENS_VERSION }}.msi.sha256
           else
             for filename in OpenLens-${{ env.LENS_VERSION }}*; do shasum -a 256 ${filename} | tee ${filename}.sha256 ; done
           fi
@@ -110,6 +113,7 @@ jobs:
             lens/dist/OpenLens-${{ env.LENS_VERSION }}*.rpm
             lens/dist/OpenLens-${{ env.LENS_VERSION }}*.zip
             lens/dist/OpenLens-${{ env.LENS_VERSION }}.exe
+            lens/dist/OpenLens-${{ env.LENS_VERSION }}.msi
             lens/dist/OpenLens-${{ env.LENS_VERSION }}*.sha256
 
       - name: Generate Changelog
@@ -127,6 +131,7 @@ jobs:
             lens/dist/OpenLens-${{ env.LENS_VERSION }}*.rpm
             lens/dist/OpenLens-${{ env.LENS_VERSION }}*.zip
             lens/dist/OpenLens-${{ env.LENS_VERSION }}.exe
+            lens/dist/OpenLens-${{ env.LENS_VERSION }}.msi
             lens/dist/OpenLens-${{ env.LENS_VERSION }}*.sha256
       - name: Latest
         uses: softprops/action-gh-release@v0.1.14
@@ -140,4 +145,5 @@ jobs:
             lens/dist/OpenLens-${{ env.LENS_VERSION }}*.rpm
             lens/dist/OpenLens-${{ env.LENS_VERSION }}*.zip
             lens/dist/OpenLens.Setup.${{ env.LENS_VERSION }}.exe
+            lens/dist/OpenLens.Setup.${{ env.LENS_VERSION }}.msi
             lens/dist/lates*.yml
