--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,8 +73,10 @@ jobs:
             cp dist/OpenLens-${{ env.LENS_VERSION }}.aarch64.rpm releasefiles/OpenLens-${{ env.LENS_VERSION }}.arm64.rpm
           else
             # set windows csc
-            set CSC_LINK=${{ env.CSC_LINK_WIN }}
-            set CSC_KEY_PASSWORD=${{ env.CSC_KEY_PASSWORD_WIN }}
+            unset CSC_LINK
+            unset CSC_KEY_PASSWORD
+            set CSC_LINK=${{ secrets.CSC_LINK_WIN }}
+            set CSC_KEY_PASSWORD=${{ secrets.CSC_KEY_PASSWORD_WIN }}
             make build
             cp dist/OpenLens*.exe releasefiles/OpenLens-${{ env.LENS_VERSION }}.exe
           fi
