--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -110,7 +110,7 @@ jobs:
             lens/dist/OpenLens-${{ env.LENS_VERSION }}*.rpm
             lens/dist/OpenLens-${{ env.LENS_VERSION }}*.zip
             lens/dist/OpenLens-${{ env.LENS_VERSION }}.exe
-            lens/dist/OpenLens-${{ env.LENS_VERSION }}((?!.*blockmap).*).sha256
+            lens/dist/OpenLens-${{ env.LENS_VERSION }}((?!.*blockmap)).sha256
 
       - name: Release
         uses: softprops/action-gh-release@v0.1.14
@@ -124,7 +124,7 @@ jobs:
             lens/dist/OpenLens-${{ env.LENS_VERSION }}*.rpm
             lens/dist/OpenLens-${{ env.LENS_VERSION }}*.zip
             lens/dist/OpenLens-${{ env.LENS_VERSION }}.exe
-            lens/dist/OpenLens-${{ env.LENS_VERSION }}((?!.*blockmap).*).sha256
+            lens/dist/OpenLens-${{ env.LENS_VERSION }}((?!.*blockmap)).sha256
       - name: Latest
         uses: softprops/action-gh-release@v0.1.14
         if: github.ref == 'refs/heads/main'
