--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -136,6 +136,5 @@ jobs:
             lens/dist/OpenLens-${{ env.LENS_VERSION }}*.deb
             lens/dist/OpenLens-${{ env.LENS_VERSION }}*.rpm
             lens/dist/OpenLens-${{ env.LENS_VERSION }}*.zip
-            lens/dist/OpenLens-${{ env.LENS_VERSION }}.exe
-            lens/dist/OpenLens-${{ env.LENS_VERSION }}*.sha256
+            lens/dist/OpenLens.Setup.${{ env.LENS_VERSION }}.exe
             lens/dist/lates*.yml
