--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         shell: bash
       - uses: actions/setup-node@v3
         with:
-          node-version: 16.16.0
+          node-version: 16.19.0
       - name: Checkout Upstream Lens
         uses: actions/checkout@v3
         with:
@@ -52,6 +52,7 @@ jobs:
               unset CSC_KEY_PASSWORD
             fi
             yarn
+            yarn run build
             env ELECTRON_BUILDER_EXTRA_ARGS="--arm64 --x64 --config.dmg.sign=false" yarn run build:app
             for file in packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.dmg; do
               if [[ "$file" == *"arm64"* ]]; then
@@ -69,6 +70,7 @@ jobs:
             done
           elif [ "$RUNNER_OS" == "Linux" ]; then
             yarn
+            yarn run build
             env ELECTRON_BUILDER_EXTRA_ARGS="--x64 --arm64" yarn run build:app
             cp packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.x86_64.AppImage releasefiles/OpenLens-${{ env.LENS_VERSION }}.AppImage
             cp packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.amd64.deb releasefiles/OpenLens-${{ env.LENS_VERSION }}.deb
@@ -78,6 +80,7 @@ jobs:
             cp packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.aarch64.rpm releasefiles/OpenLens-${{ env.LENS_VERSION }}.arm64.rpm
           else
             yarn
+            yarn run build
             yarn run build:app
             cp packages/open-lens/dist/OpenLens*.exe releasefiles/OpenLens-${{ env.LENS_VERSION }}.exe
             cp packages/open-lens/dist/OpenLens*.exe packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.exe
