--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,9 +3,9 @@ name: Build Lens
 on:
   workflow_dispatch:
   push:
-    branches: [ main ]
+    branches: [main]
     paths-ignore:
-      - '**/README.md'
+      - "**/README.md"
   pull_request:
 
 jobs:
@@ -20,8 +20,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Export version to variable
         run: |
-            export LENS_VERSION=$(cat version)
-            echo "LENS_VERSION=$LENS_VERSION" >> $GITHUB_ENV
+          export LENS_VERSION=$(cat version)
+          echo "LENS_VERSION=$LENS_VERSION" >> $GITHUB_ENV
         shell: bash
       - uses: actions/setup-node@v3
         with:
@@ -50,7 +50,7 @@ jobs:
             if [ "${CSC_KEY_PASSWORD}" = "" ]; then
               unset CSC_KEY_PASSWORD
             fi
-            yarn
+            yarn run all:install
             yarn run build
             yarn run build:app
             for file in packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.dmg; do
@@ -68,7 +68,7 @@ jobs:
               fi
             done
           elif [ "$RUNNER_OS" == "Linux" ]; then
-            yarn
+            yarn run all:install
             yarn run build
             yarn run build:app
             cp packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.x86_64.AppImage releasefiles/OpenLens-${{ env.LENS_VERSION }}.AppImage
@@ -78,7 +78,7 @@ jobs:
             cp packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.arm64.deb releasefiles/OpenLens-${{ env.LENS_VERSION }}.arm64.deb
             cp packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.aarch64.rpm releasefiles/OpenLens-${{ env.LENS_VERSION }}.arm64.rpm
           else
-            yarn
+            yarn run all:install
             yarn run build
             yarn run build:app
             cp packages/open-lens/dist/OpenLens*.exe releasefiles/OpenLens-${{ env.LENS_VERSION }}.exe
@@ -130,7 +130,7 @@ jobs:
         with:
           tag_name: v${{ env.LENS_VERSION }}
           body_path: ${{ github.workspace }}-CHANGELOG.txt
-          files: | 
+          files: |
             lens/packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.dmg
             lens/packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.AppImage
             lens/packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.deb
@@ -143,7 +143,7 @@ jobs:
         if: github.ref == 'refs/heads/main'
         with:
           tag_name: Latest
-          files: | 
+          files: |
             lens/packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.dmg
             lens/packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.AppImage
             lens/packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.deb
