--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,14 +55,14 @@ jobs:
             yarn run all:install
             yarn run build
             yarn run build:app
-            for file in packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.dmg; do
+            for file in open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.dmg; do
               if [[ "$file" == *"arm64"* ]]; then
                 cp "$file" releasefiles/OpenLens-${{ env.LENS_VERSION }}-arm64.dmg
               else
                 cp "$file" releasefiles/OpenLens-${{ env.LENS_VERSION }}.dmg
               fi
             done
-            for file in packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}-mac.zip; do
+            for file in open-lens/dist/OpenLens-${{ env.LENS_VERSION }}-mac.zip; do
               if [[ "$file" == *"arm64"* ]]; then
                 cp "$file" releasefiles/OpenLens-${{ env.LENS_VERSION }}-arm64.zip
               else
@@ -73,18 +73,18 @@ jobs:
             yarn run all:install
             yarn run build
             yarn run build:app
-            cp packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.x86_64.AppImage releasefiles/OpenLens-${{ env.LENS_VERSION }}.AppImage
-            cp packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.amd64.deb releasefiles/OpenLens-${{ env.LENS_VERSION }}.deb
-            cp packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.x86_64.rpm releasefiles/OpenLens-${{ env.LENS_VERSION }}.rpm
-            cp packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.arm64.AppImage releasefiles/OpenLens-${{ env.LENS_VERSION }}.arm64.AppImage
-            cp packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.arm64.deb releasefiles/OpenLens-${{ env.LENS_VERSION }}.arm64.deb
-            cp packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.aarch64.rpm releasefiles/OpenLens-${{ env.LENS_VERSION }}.arm64.rpm
+            cp open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.x86_64.AppImage releasefiles/OpenLens-${{ env.LENS_VERSION }}.AppImage
+            cp open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.amd64.deb releasefiles/OpenLens-${{ env.LENS_VERSION }}.deb
+            cp open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.x86_64.rpm releasefiles/OpenLens-${{ env.LENS_VERSION }}.rpm
+            cp open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.arm64.AppImage releasefiles/OpenLens-${{ env.LENS_VERSION }}.arm64.AppImage
+            cp open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.arm64.deb releasefiles/OpenLens-${{ env.LENS_VERSION }}.arm64.deb
+            cp open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.aarch64.rpm releasefiles/OpenLens-${{ env.LENS_VERSION }}.arm64.rpm
           else
             yarn run all:install
             yarn run build
             yarn run build:app
-            cp packages/open-lens/dist/OpenLens*.exe releasefiles/OpenLens-${{ env.LENS_VERSION }}.exe
-            cp packages/open-lens/dist/OpenLens*.exe packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.exe
+            cp open-lens/dist/OpenLens*.exe releasefiles/OpenLens-${{ env.LENS_VERSION }}.exe
+            cp open-lens/dist/OpenLens*.exe packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.exe
           fi
         shell: bash
         working-directory: lens
@@ -108,7 +108,7 @@ jobs:
             for filename in OpenLens-${{ env.LENS_VERSION }}*; do shasum -a 256 ${filename} | tee ${filename}.sha256 ; done
           fi
         shell: bash
-        working-directory: lens/packages/open-lens/dist
+        working-directory: lens/open-lens/dist
 
       - uses: actions/upload-artifact@v3
         if: github.ref != 'refs/heads/main'
@@ -116,13 +116,13 @@ jobs:
           name: OpenLens-${{ matrix.os }}
           retention-days: 5
           path: |
-            lens/packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.dmg
-            lens/packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.AppImage
-            lens/packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.deb
-            lens/packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.rpm
-            lens/packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.zip
-            lens/packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.exe
-            lens/packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.sha256
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.dmg
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.AppImage
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.deb
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.rpm
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.zip
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.exe
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.sha256
 
       - name: Generate Changelog
         run: curl -s https://api.github.com/repos/lensapp/lens/releases/latest | jq -r 'select(.prerelease == false) | .body[0:]' > ${{ github.workspace }}-CHANGELOG.txt
@@ -133,23 +133,23 @@ jobs:
           tag_name: v${{ env.LENS_VERSION }}
           body_path: ${{ github.workspace }}-CHANGELOG.txt
           files: |
-            lens/packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.dmg
-            lens/packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.AppImage
-            lens/packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.deb
-            lens/packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.rpm
-            lens/packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.zip
-            lens/packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.exe
-            lens/packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.sha256
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.dmg
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.AppImage
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.deb
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.rpm
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.zip
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.exe
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.sha256
       - name: Latest
         uses: softprops/action-gh-release@v0.1.15
         if: github.ref == 'refs/heads/main'
         with:
           tag_name: Latest
           files: |
-            lens/packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.dmg
-            lens/packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.AppImage
-            lens/packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.deb
-            lens/packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.rpm
-            lens/packages/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.zip
-            lens/packages/open-lens/dist/OpenLens.Setup.${{ env.LENS_VERSION }}.exe
-            lens/packages/open-lens/dist/lates*.yml
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.dmg
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.AppImage
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.deb
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.rpm
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}*.zip
+            lens/open-lens/dist/OpenLens.Setup.${{ env.LENS_VERSION }}.exe
+            lens/open-lens/dist/lates*.yml
