Implement Build Number

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           export LENS_VERSION=$(cat version)
           echo "LENS_VERSION=$LENS_VERSION" >> $GITHUB_ENV
+          echo "BUILD_NUMBER=${{ github.run_number }}" >> $GITHUB_ENV
         shell: bash
       - uses: actions/setup-node@v3
         with:
@@ -36,8 +37,6 @@ jobs:
       - name: Patch Upstream Lens
         run: |
           node update.js
-        env:
-          BUILD_NUMBER: ${{ github.run_number }}
       - name: Build Lens
         run: |
           if [ "$RUNNER_OS" == "Windows" ]; then
@@ -64,7 +63,7 @@ jobs:
           else
             unset DOWNLOAD_ALL_ARCHITECTURES
             npx nx run open-lens:build:app
-            cp open-lens/dist/OpenLens*.exe open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ github.run_number }}.exe
+            cp open-lens/dist/OpenLens*.exe open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ env.BUILD_NUMBER }}.exe
           fi
         shell: bash
         working-directory: lens
@@ -80,14 +79,13 @@ jobs:
           WIN_CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD_WIN }}
           CSC_FOR_PULL_REQUEST: true
           DOWNLOAD_ALL_ARCHITECTURES: true
-          BUILD_NUMBER: ${{ github.run_number }}
 
       - name: Calculate SHA256 checksum
         run: |
           if [ "$RUNNER_OS" == "Windows" ]; then
-            certutil -hashfile OpenLens-${{ env.LENS_VERSION }}.${{ github.run_number }}.exe SHA256 | tee OpenLens-${{ env.LENS_VERSION }}.${{ github.run_number }}.exe.sha256
+            certutil -hashfile OpenLens-${{ env.LENS_VERSION }}.${{ env.BUILD_NUMBER }}.exe SHA256 | tee OpenLens-${{ env.LENS_VERSION }}.${{ env.BUILD_NUMBER }}.exe.sha256
           else
-            for filename in OpenLens-${{ env.LENS_VERSION }}.${{ github.run_number }}*; do shasum -a 256 ${filename} | tee ${filename}.sha256 ; done
+            for filename in OpenLens-${{ env.LENS_VERSION }}.${{ env.BUILD_NUMBER }}*; do shasum -a 256 ${filename} | tee ${filename}.sha256 ; done
           fi
         shell: bash
         working-directory: lens/open-lens/dist
@@ -98,13 +96,13 @@ jobs:
           name: OpenLens-${{ matrix.os }}
           retention-days: 5
           path: |
-            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ github.run_number }}*.dmg
-            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ github.run_number }}*.AppImage
-            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ github.run_number }}*.deb
-            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ github.run_number }}*.rpm
-            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ github.run_number }}*.zip
-            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ github.run_number }}.exe
-            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ github.run_number }}*.sha256
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ env.BUILD_NUMBER }}*.dmg
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ env.BUILD_NUMBER }}*.AppImage
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ env.BUILD_NUMBER }}*.deb
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ env.BUILD_NUMBER }}*.rpm
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ env.BUILD_NUMBER }}*.zip
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ env.BUILD_NUMBER }}.exe
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ env.BUILD_NUMBER }}*.sha256
 
       - name: Generate Changelog
         run: curl -s https://api.github.com/repos/lensapp/lens/releases/latest | jq -r 'select(.prerelease == false) | .body[0:]' > ${{ github.workspace }}-CHANGELOG.txt
@@ -112,26 +110,26 @@ jobs:
         uses: softprops/action-gh-release@v0.1.15
         if: github.ref == 'refs/heads/main'
         with:
-          tag_name: v${{ env.LENS_VERSION }}.${{ github.run_number }}
+          tag_name: v${{ env.LENS_VERSION }}.${{ env.BUILD_NUMBER }}
           body_path: ${{ github.workspace }}-CHANGELOG.txt
           files: |
-            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ github.run_number }}*.dmg
-            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ github.run_number }}*.AppImage
-            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ github.run_number }}*.deb
-            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ github.run_number }}*.rpm
-            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ github.run_number }}*.zip
-            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ github.run_number }}.exe
-            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ github.run_number }}*.sha256
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ env.BUILD_NUMBER }}*.dmg
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ env.BUILD_NUMBER }}*.AppImage
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ env.BUILD_NUMBER }}*.deb
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ env.BUILD_NUMBER }}*.rpm
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ env.BUILD_NUMBER }}*.zip
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ env.BUILD_NUMBER }}.exe
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ env.BUILD_NUMBER }}*.sha256
       - name: Latest
         uses: softprops/action-gh-release@v0.1.15
         if: github.ref == 'refs/heads/main'
         with:
           tag_name: Latest
           files: |
-            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ github.run_number }}*.dmg
-            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ github.run_number }}*.AppImage
-            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ github.run_number }}*.deb
-            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ github.run_number }}*.rpm
-            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ github.run_number }}*.zip
-            lens/open-lens/dist/OpenLens.Setup.${{ env.LENS_VERSION }}.${{ github.run_number }}.exe
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ env.BUILD_NUMBER }}*.dmg
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ env.BUILD_NUMBER }}*.AppImage
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ env.BUILD_NUMBER }}*.deb
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ env.BUILD_NUMBER }}*.rpm
+            lens/open-lens/dist/OpenLens-${{ env.LENS_VERSION }}.${{ env.BUILD_NUMBER }}*.zip
+            lens/open-lens/dist/OpenLens.Setup.${{ env.LENS_VERSION }}.${{ env.BUILD_NUMBER }}.exe
             lens/open-lens/dist/lates*.yml
